@@ -221,7 +221,7 @@ Bool OptimizeLive(Var * proc)
 
 			result = i->result;
 			if (result != NULL) {
-				if (op != INSTR_LABEL && op != INSTR_CALL && op != INSTR_PRINT && op != INSTR_FORMAT) {
+				if (op != INSTR_LABEL && op != INSTR_REF && op != INSTR_CALL) {
 					if (result->flags == 0 && !VarIsLabel(result) && !VarIsArray(result) && FlagOff(result->submode, SUBMODE_REF|SUBMODE_OUT)) {
 						if (VERBOSE) {
 							printf("removed dead %ld:", n); InstrPrint(i);
